Fix PWA install icon to icon-only and refresh manifest cache

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-title" content="Expat Village" />
     <link rel="icon" type="image/svg+xml" href="/brand/expat-village-icon-navy.svg" />
     <link rel="apple-touch-icon" href="/brand/expat-village-icon-navy.svg" />
-    <link rel="manifest" href="/manifest.webmanifest" />
+    <link rel="manifest" href="/manifest.webmanifest?v=2" />
     <title>Expat Village</title>
   </head>
   <body>
